# nrf52_lbs_with_sht3x

./: CMakeLists.txt  lapita_board.overlay  prj.conf
boards/: nrf52832dk_nrf52832.overlay
boards/lapita_board/: Kconfig.board  Kconfig.defconfig  lapita_board-pinctrl.dtsi  lapita_board.dts  lapita_board.yaml  lapita_board_defconfig
src/: main.c
